2006-11-12 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b16

 * Fix: Embedded Slideshow in low mode.

2006-11-11 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b15

 * Fix: %$%&$/( Typo the second. introduced also in b13.

2006-11-11 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b14

 * Fix: %/&$(/&/ typo.

2006-11-10 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b13

 * Fix: Choosing "blank" in recreate captions did nothing.
   Thanks to Kai.

 * Fix: Albumitem actions in thumbsview was broken in alpha3-svn-b9

 * Fix: Use class=".." instead of align=".." in printPopupStart()
	So its ready for rtl languages.

 * Fix: Reorder on mainpage were broken in alpha2-svn-b24

2006-11-10 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b12

 * Change: Tweaked readMoreBox()

 * Change: Tweaked description for photos in thumbnail view.

 * Change: CSS for panel to avoid conflicts. (Change also in YUI!)

2006-11-10 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b11

 * Fix: Include CSS in random-block and feature-block (if not already done).

 * Change: Center content of random-block and feature-block.

 * Fix: setup/ghcc.php

2006-11-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b10

 * Fix: Links to other method in slideshow were missing.

 * New: Made folder for slideshow icons.

 * Change: Using new icon for "stop" in slideshow.

   Thanks for this icon to Peter Schumacher.

2006-11-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b9

 * Fix: Clicking as non admin on a (sub-)album that needs upgrade failed.

 * Change: make page header a little heigher.

 * Change: If less then 2 item option in thumbs view,
	   then only icons are showed.

2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b8

 * Change: RFE #983979
	
	   Text for login is more descriptive.

2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b7

 * Fix: Show descriptionbox in photo view only if there IS a description.

2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b6

 * NEW: RFE #556928
