@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.6-alpha3-svn-b16';
+$gallery->version = '1.6-alpha3-svn-b17';
 $gallery->config_version = 99;
 $gallery->album_version = 39;
 $gallery->user_version = 6;
