@@ -37,11 +37,11 @@ list($sort, $order, $fieldname) = getRequestVar(array('sort', 'order', 'fieldnam
 $adminOptions[] = array(
     'text' => gTranslate('core', "Rebuild highlights"),
     'url' =>  doCommand('rebuild_highlights'),
-    'longtext' => gTranslate('core', "Recreate all highlights according to the setting in configwizard.<br>(Starts immediately)")
+    'longtext' => gTranslate('core', "Recreate all highlights according to the setting in Config Wizard.<br>(Starts immediately)")
 );
 
 $adminOptions[] = array(
-    'text' => gTranslate('core', "Albumorder"),
+    'text' => gTranslate('core', "Album Order"),
     'url' => makeGalleryUrl('administer_startpage.php', array('sort' => 1, 'type' => 'popup')),
     'longtext' => gTranslate('core', "Sort the albums on the startpage(s).<br>(Opens an option dialog)")
 );
@@ -51,7 +51,7 @@ array_sort_by_fields($adminOptions, 'text', 'asc');
 $sortOptions = array(
     'name'          => gTranslate('core', "By (physical) name"),
     'clicks_date'   => gTranslate('core', "By last reset date"),
-    'creation_date' => gTranslate('core', "By creation date (works only with albums created with 1.5.2-cvs-b28 or newer)")
+    'creation_date' => gTranslate('core', "By creation date (works only with albums created with 1.5.2 or newer)")
 );
 
 printPopupStart(gTranslate('core', "Administer Startpage"), '', 'left');
