@@ -1,3 +1,11 @@
+2006-11-19 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b17
+
+ * Fix: Little code typo in view_album.php.
+
+ * Fix: Some text typos.
+
+ * Some phpDoc adds.
+
 2006-11-12 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b16
 
  * Fix: Embedded Slideshow in low mode.
